2006-02-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Kick non-members when room
	reconfigured to be member-only or when membership is revoked in
	member-only room, allowed "true" and "false" in x:data forms
	(thanks to Sergei Golovan)

	* src/mod_configure.erl: Added "Host" parameter to get_form and
	set_form functions (thanks to Sergei Golovan)

	* src/ejabberd_s2s_out.erl: Bugfix

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/web/ejabberd_web.erl: Bugfix (thanks to Badlop)

	* src/mod_irc/mod_irc.erl: Updated copyright dates
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/web/ejabberd_web_admin.erl: Likewise

2006-02-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth_odbc.erl: Added ejabberd_odbc_sup to ejabberd
	supervision tree

	* src/web/ejabberd_http.erl: Authentication check moved to
	ejabberd_web.erl
	* src/web/ejabberd_web.erl: Likewise

	* src/web/Makefile.in: Added ejabberd_http.hrl dependency

	* src/web/ejabberd_http_poll.erl: Updated to use {active, once}
	socket mode

	* src/mod_irc/mod_irc.erl: Updated to use gen_server behaviour and
	ejabberd supervision tree
	* src/mod_irc/mod_irc_connection.erl: Likewise

2006-02-02  Mickael Remond  <mickael.remond@process-one.net>

	* src/configure.ac: --prefix option can now override the default
	install dir
	* src/configure: Likewise
	* src/Makefile.in: Likewise

2006-02-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Updated to use gen_server
	behaviour and ejabberd supervision tree
	* src/mod_echo.erl: Likewise

2006-02-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added a supervisor for conference room
	processes
	* src/mod_muc/mod_muc_room.erl: Likewise

2006-01-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Fixed syntax error
