@@ -1,3 +1,9 @@
+2006-02-07  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/ejabberd_auth.erl: plugin authentication modules can now
+	be used in the configuration file: {auth_method, module} will now
+	use the module ejabberd_auth_module.erl for authentication.
+
 2006-02-05  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_muc/mod_muc_room.erl: Kick non-members when room
